fixing small issues - fixing the yellow overlap on categories in no auth index page

--- a/userProfile/static/css/index.css
+++ b/userProfile/static/css/index.css
@@ -80,6 +80,7 @@
 .boxTitle h6 img{
 	box-shadow: none;
 	display: inline-block;
+	max-width: none;
 }
 .topReviews{
 	background-color: #fff;
